--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 apply plugin: 'de.mobilej.unmock'
+apply plugin: 'spoon'
 
 android {
     compileSdkVersion 23
@@ -30,6 +31,14 @@ android {
 
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
+		// needed for assertJ
+		        exclude 'asm-license.txt'
+			        exclude 'LICENSE'
+				        exclude 'NOTICE'
+
+        // hack for instrumentation testing :-(
+	        exclude 'LICENSE.txt'
+		
     }
 }
 
@@ -51,4 +60,20 @@ dependencies {
     testCompile 'com.squareup.assertj:assertj-android:1.1.0'
     testCompile 'com.android.support:support-annotations:23.1.0'
     testCompile 'org.mockito:mockito-core:1.9.5'
+
+
+    androidTestCompile 'com.android.support:support-v4:23.1.0'
+        androidTestCompile 'com.android.support:support-annotations:23.1.0'
+
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+        androidTestCompile 'com.android.support.test:rules:0.4.1'
+	    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+	    	    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.1'
+
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.2.0'
+        androidTestCompile 'com.squareup.assertj:assertj-android:1.1.1'
+
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
+        androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+	
 }
