--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.3.1'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
         classpath 'de.mobilej.unmock:UnMockPlugin:0.3.6'
+
+ classpath('com.squareup.spoon:spoon-runner:1.2.0') {
+             exclude module: "guava"
+	             }
+		             classpath('com.stanfy.spoon:spoon-gradle-plugin:1.0.3') {
+			                 exclude module: "guava"
+					         }
+						 
     }
 }
 
