--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,14 @@ android {
 
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
-		// needed for assertJ
-		        exclude 'asm-license.txt'
-			        exclude 'LICENSE'
-				        exclude 'NOTICE'
+        // needed for assertJ
+        exclude 'asm-license.txt'
+        exclude 'LICENSE'
+        exclude 'NOTICE'
 
         // hack for instrumentation testing :-(
-	        exclude 'LICENSE.txt'
-		
+        exclude 'LICENSE.txt'
+
     }
 }
 
@@ -65,17 +65,18 @@ dependencies {
 
 
     androidTestCompile 'com.android.support:support-v4:23.1.0'
-        androidTestCompile 'com.android.support:support-annotations:23.1.0'
+    androidTestCompile 'com.android.support:appcompat-v7:23.1.0'
+    androidTestCompile 'com.android.support:support-annotations:23.1.0'
 
     androidTestCompile 'com.android.support.test:runner:0.4.1'
-        androidTestCompile 'com.android.support.test:rules:0.4.1'
-	    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
-	    	    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.1'
 
     androidTestCompile 'com.squareup.spoon:spoon-client:1.2.0'
-        androidTestCompile 'com.squareup.assertj:assertj-android:1.1.1'
+    androidTestCompile 'com.squareup.assertj:assertj-android:1.1.1'
 
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
-        androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
-	
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+
 }
