--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.9.5'
 
 
+    androidTestCompile 'com.android.support:support-v4:23.1.0'
     androidTestCompile 'com.android.support:support-annotations:23.1.0'
 
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.1'
