--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
+apply plugin: 'spoon'
 apply plugin: 'de.mobilej.unmock'
 apply plugin: 'com.neenbedankt.android-apt'
 
@@ -30,11 +31,33 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/services/javax.annotation.processing.Processor'
+  // needed for assertJ
+          exclude 'asm-license.txt'
+	          exclude 'LICENSE'
+		          exclude 'NOTICE'
+
+        // hack for instrumentation testing :-(
+	        exclude 'LICENSE.txt'
+		
+exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
 dependencies {
+ androidTestCompile 'com.android.support:support-v4:23.1.0'
+     androidTestCompile 'com.android.support:support-annotations:23.1.0'
+
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+        androidTestCompile 'com.android.support.test:rules:0.4.1'
+	    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.2.0'
+        androidTestCompile 'com.squareup.assertj:assertj-android:1.1.1'
+
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
+        androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+	
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup:otto:1.3.8'
     compile 'org.osmdroid:osmdroid-android:4.3'
